gitops/platform-apps/opencloud/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opencloud
  namespace: opencloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`opencloud.__ZONE_NAME__`)
      services:
        - kind: Service
          name: opencloud
          port: 9200
          scheme: https
          serversTransport: opencloud-insecure
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: collabora
  namespace: opencloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`opencloud-collabora.__ZONE_NAME__`)
      services:
        - kind: Service
          name: opencloud-collabora
          port: 9980
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wopiserver
  namespace: opencloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`opencloud-wopiserver.__ZONE_NAME__`)
      services:
        - kind: Service
          name: opencloud-collaboration
          port: 9300
  tls: {}
